[gd_scene load_steps=37 format=2]

[ext_resource path="res://src/ui_elements/themes/vlab_theme_light/vlab.tres" type="Theme" id=1]
[ext_resource path="res://src/scripts/welcome.gd" type="Script" id=2]
[ext_resource path="res://src/ui_elements/images/c-dustin-91AQt9p4Mo8-unsplash.jpg" type="Texture" id=3]
[ext_resource path="res://src/ui_elements/fonts/Open_Sans/open_sans_extra_bold.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/ui_elements/fonts/Open_Sans/open_sans_normal.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/scenes/CME450.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/ui_elements/icons/record_voice_over_FILL0_wght400_GRAD0_opsz48.png" type="Texture" id=7]
[ext_resource path="res://src/scenes/function/Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/ui_elements/icons/save_FILL0_wght400_GRAD0_opsz48.png" type="Texture" id=9]
[ext_resource path="res://src/ui_elements/icons/close_FILL0_wght400_GRAD0_opsz48.png" type="Texture" id=10]
[ext_resource path="res://src/ui_elements/icons/volume_up_FILL0_wght400_GRAD200_opsz48.png" type="Texture" id=11]
[ext_resource path="res://src/ui_elements/icons/start_FILL0_wght400_GRAD0_opsz48.png" type="Texture" id=12]
[ext_resource path="res://src/scenes/function/AutoNarrator.tscn" type="PackedScene" id=13]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="Animation" id=19]
resource_name = "ButtonsFadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Audio:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Narrator:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Load:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Start:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.9, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Exit:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/WelcomeMessage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Welcome/WelcomeBG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.560784, 0.737255, 0.733333, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Welcome/WelcomePanel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/WelcomeMessage:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/WelcomeDescription:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/WelcomeDescription:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Welcome:mouse_filter")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Welcome/WelcomeImage:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Welcome/WelcomePanel/Panel:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Audio:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Narrator:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Load:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Start:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Exit:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "TextToSpeechStart"
tracks/0/type = "method"
tracks/0/path = NodePath("Welcome/AutoNarrator")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "tts"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "WelcomeBGFadeIn"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Welcome/WelcomeBG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.368627, 0.505882, 0.67451, 1 ), Color( 0.560784, 0.737255, 0.733333, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Welcome:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Welcome/WelcomeImage:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "WelcomeDescriptionFadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/WelcomeDescription:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/WelcomeDescription:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Welcome:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "WelcomePanelFadeIn"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Welcome/WelcomePanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Welcome/WelcomePanel/Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "WelcomeTextFadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/WelcomeMessage:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Welcome/WelcomePanel/MarginContainer/WelcomeText/WelcomeMessage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "ButtonsFadeIn"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "RESET"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "TextToSpeechStart"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "WelcomeBGFadeIn"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "WelcomeDescriptionFadeIn"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "WelcomePanelFadeIn"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "WelcomeTextFadeIn"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=14]
states/ButtonsFadeIn/node = SubResource( 20 )
states/ButtonsFadeIn/position = Vector2( -132.754, 230 )
states/RESET/node = SubResource( 7 )
states/RESET/position = Vector2( -241.315, 86 )
states/TextToSpeechStart/node = SubResource( 23 )
states/TextToSpeechStart/position = Vector2( 194, 230 )
states/WelcomeBGFadeIn/node = SubResource( 16 )
states/WelcomeBGFadeIn/position = Vector2( -55.7543, 86 )
states/WelcomeDescriptionFadeIn/node = SubResource( 8 )
states/WelcomeDescriptionFadeIn/position = Vector2( -132.754, 158 )
states/WelcomePanelFadeIn/node = SubResource( 9 )
states/WelcomePanelFadeIn/position = Vector2( 194, 86 )
states/WelcomeTextFadeIn/node = SubResource( 10 )
states/WelcomeTextFadeIn/position = Vector2( 194, 158 )
transitions = [ "WelcomePanelFadeIn", "WelcomeTextFadeIn", SubResource( 11 ), "WelcomeTextFadeIn", "WelcomeDescriptionFadeIn", SubResource( 12 ), "RESET", "WelcomeBGFadeIn", SubResource( 17 ), "WelcomeBGFadeIn", "WelcomePanelFadeIn", SubResource( 18 ), "WelcomeDescriptionFadeIn", "ButtonsFadeIn", SubResource( 21 ), "ButtonsFadeIn", "TextToSpeechStart", SubResource( 24 ) ]
start_node = "RESET"
graph_offset = Vector2( -497.397, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=15]

[node name="Home" type="CanvasLayer"]

[node name="Welcome" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
scene = ExtResource( 6 )

[node name="WelcomeBG" type="ColorRect" parent="Welcome"]
visible = false
modulate = Color( 0.560784, 0.737255, 0.733333, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 1

[node name="WelcomeImage" type="TextureButton" parent="Welcome"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
texture_normal = ExtResource( 3 )
expand = true

[node name="WelcomeMessageBG" type="TextureRect" parent="Welcome"]
margin_right = 40.0
margin_bottom = 40.0
texture = SubResource( 1 )

[node name="WelcomePanel" type="MarginContainer" parent="Welcome"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -416.5
margin_top = -71.0
margin_right = 416.5
margin_bottom = 71.0
mouse_filter = 1

[node name="Panel" type="Panel" parent="Welcome/WelcomePanel"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 833.0
margin_bottom = 266.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Welcome/WelcomePanel"]
margin_right = 833.0
margin_bottom = 266.0
mouse_filter = 1
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="WelcomeText" type="VBoxContainer" parent="Welcome/WelcomePanel/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 817.0
margin_bottom = 250.0
custom_constants/separation = 24

[node name="WelcomeMessage" type="Label" parent="Welcome/WelcomePanel/MarginContainer/WelcomeText"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 801.0
margin_bottom = 69.0
mouse_filter = 1
custom_fonts/font = ExtResource( 4 )
text = "Virtual Lab"
align = 1

[node name="WelcomeDescription" type="Label" parent="Welcome/WelcomePanel/MarginContainer/WelcomeText"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 93.0
margin_right = 801.0
margin_bottom = 146.0
mouse_filter = 1
custom_fonts/font = ExtResource( 5 )
text = "CME450 Virtual Lab. Click \"Start\" button to continue."
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Welcome/WelcomePanel/MarginContainer/WelcomeText"]
margin_top = 170.0
margin_right = 801.0
margin_bottom = 234.0

[node name="Exit" parent="Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer" instance=ExtResource( 8 )]
modulate = Color( 1, 1, 1, 0 )
margin_right = 64.0
margin_bottom = 64.0
text = ""
icon = ExtResource( 10 )

[node name="Audio" parent="Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer" instance=ExtResource( 8 )]
modulate = Color( 1, 1, 1, 0 )
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
text = ""
icon = ExtResource( 11 )

[node name="Narrator" parent="Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer" instance=ExtResource( 8 )]
modulate = Color( 1, 1, 1, 0 )
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
text = ""
icon = ExtResource( 7 )

[node name="0" type="MarginContainer" parent="Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer"]
margin_left = 204.0
margin_right = 733.0
margin_bottom = 64.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="Load" parent="Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer" instance=ExtResource( 8 )]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 685.0
margin_right = 749.0
margin_bottom = 64.0
text = ""
icon = ExtResource( 9 )

[node name="Start" parent="Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer" instance=ExtResource( 8 )]
modulate = Color( 1, 1, 1, 0 )
margin_left = 737.0
margin_right = 801.0
margin_bottom = 64.0
text = ""
icon = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Welcome"]
root_node = NodePath("../..")
autoplay = "RESET"
anims/ButtonsFadeIn = SubResource( 19 )
anims/RESET = SubResource( 2 )
anims/TextToSpeechStart = SubResource( 22 )
anims/WelcomeBGFadeIn = SubResource( 3 )
anims/WelcomeDescriptionFadeIn = SubResource( 4 )
anims/WelcomePanelFadeIn = SubResource( 5 )
anims/WelcomeTextFadeIn = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="Welcome/AnimationPlayer"]
tree_root = SubResource( 14 )
anim_player = NodePath("..")
active = true
parameters/playback = SubResource( 15 )

[node name="AutoNarrator" parent="Welcome" instance=ExtResource( 13 )]
text = "Welcome to the Steel, Design, and Construction Virtual Lab!

I am the narrator, and I will be here to help you with the course!

Click on the \"Narrator\" icon if you would like me to stop automatically narrating throughout the course! You can still play induvidual narrations for certain areas of this course for accessibility.

Click on the \"Start\" button to begin the lab!"
tts_on_start = false

[connection signal="button_up" from="Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Exit" to="Welcome" method="_on_Exit_button_up"]
[connection signal="button_up" from="Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Audio" to="Welcome" method="_on_Audio_button_up"]
[connection signal="button_up" from="Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Narrator" to="Welcome" method="_on_Narrator_button_up"]
[connection signal="button_up" from="Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Load" to="Welcome" method="_on_Load_button_up"]
[connection signal="button_up" from="Welcome/WelcomePanel/MarginContainer/WelcomeText/HBoxContainer/Start" to="Welcome" method="_on_Start_button_up"]
